Belajar Nodejs Register login selesai

--- a/belajar-register-login/package.json
+++ b/belajar-register-login/package.json
@@ -4,7 +4,8 @@
   "description": "Belajar membuat aplikasi sederhana untuk melakukan registrasi user dan login",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [
     "belajar",
@@ -12,5 +13,18 @@
     "js"
   ],
   "author": "zeihan aulia",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.6",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
+  }
 }
